# ankiweb-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix
src/: collection.rs  main.rs  normal_sync.rs  sync.rs
