[package]
name = "ankiweb-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool for interacting with AnkiWeb: add notes, list decks, backup collections"
authors = ["claw <clawbot@euank.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
zstd = "0.13"
dirs = "6"
chrono = "0.4"
